# vaultdantic

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: bump_version.py
src/vaultdantic/: mixin.py
tests/: test_onepassword.py
vaultdantic/: __init__.py  cli.py  mixin.py
vaultdantic/__tests__/: test_cli.py  test_onepassword.py  test_vault_mixin.py
vaultdantic/vaults/: __init__.py  base.py  onepassword.py
